tests/paczka1/fuzzy1/58470409.err
Error in line 16: Kgzdji A434 129,0
Error in line 26: RSm A434 40,7
Error in line 23: A433 A433 84,4
Error in line 33: ItZT15BDp A433 116,5
Error in line 28: RSm A415 34,3
Error in line 38: gSaHIPlHx A434 59,4
